--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,57 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* =================== Animations ==================== */
+/* initial dissolve */
+@keyframes dissolve {
+  0% { opacity: 1; }
+  100% { opacity: 0; visibility: hidden; }
+}
+
+.dissolve {
+  animation: dissolve 2s forwards;
+}
+
+/* fancier radial dissolve that doesn't look so good TODO: Delete this later */
+@keyframes radial-dissolve {
+  0% {
+    background-size: 0 0;
+  }
+  100% {
+    background-size: 2000% 2000%;
+    opacity: 0;
+  }
+}
+
+.radial-dissolve {
+  /*position: relative;*/
+  animation: radial-dissolve 2s forwards;
+  background: radial-gradient(circle, transparent 1%, black 1%);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/* The rotating glow behind a new domain modal right after collection */
+.glamour-modal::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 110%;
+    background: radial-gradient(ellipse, rgba(241, 184, 80, 0.8) 0%, transparent 50%);
+    border-radius: 50%;
+    z-index: -1;
+    transform: translate(-50%, -50%);
+    animation: rotate-shadow 9s infinite linear;
+}
+
+@keyframes rotate-shadow {
+    0% {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100% {
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
